--- a/index.html
+++ b/index.html
@@ -6,6 +6,74 @@
     <title>Máv Utastájékoztató</title>
 </head>
 <body>
-    
+    <table>
+        <thead>
+            <tr>
+                <th>Tervezett <br> 
+                    érkezés</th>
+                <th>Érkezés</th>
+                <th>Vonat</th>
+                <th>Honnan</th>
+                <th>Hova</th>
+                <th>Vágány</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>8:30</td>
+                <td>8:42</td>
+                <td>IC</td>
+                <td>Szeged</td>
+                <td>Szatymaz- <br>
+                    Kistelek</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>9:22</td>
+                <td></td>
+                <td>SZ</td>
+                <td>Szentes</td>
+                <td>Csongrád</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>9:22</td>
+                <td></td>
+                <td>IC</td>
+                <td>Szeged</td>
+                <td>Szatymaz- <br>
+                    Kistelek</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>9:24</td>
+                <td></td>
+                <td>SZ</td>
+                <td>Lakitelek</td>
+                <td>Tiszaalpár</td> 
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>9:27</td>
+                <td></td>
+                <td>IC</td>
+                <td>Nyugati** <br> 
+                Budapest</td>
+                <td>Cegléd- <br>
+                Kecskemét</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>9:30</td>
+                <td></td>
+                <td>IC</td>
+                <td>Szeged</td>
+                <td>Szatymaz- <br>
+                    Kistelek</td>
+                <td>3</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
