--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <table>
         <thead>
             <tr>
+                <th>8:43:13</th>
+                <th>MÁV induló járatok</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th><img src="post_máv.jpg" alt="Máv logo" width="75" title="Máv logo"></th>
+            </tr>
+            <tr>
                 <th>Tervezett <br> 
                     érkezés</th>
                 <th>Érkezés</th>
@@ -22,8 +30,8 @@
 
         <tbody>
             <tr>
-                <td>8:30</td>
-                <td>8:42</td>
+                <td class="elso_oszlop">8:30</td>
+                <td id="keses">8:42</td>
                 <td>IC</td>
                 <td>Szeged</td>
                 <td>Szatymaz- <br>
@@ -31,7 +39,7 @@
                 <td>5</td>
             </tr>
             <tr>
-                <td>9:22</td>
+                <td class="elso_oszlop">9:22</td>
                 <td></td>
                 <td>SZ</td>
                 <td>Szentes</td>
@@ -39,7 +47,7 @@
                 <td>2</td>
             </tr>
             <tr>
-                <td>9:22</td>
+                <td class="elso_oszlop">9:22</td>
                 <td></td>
                 <td>IC</td>
                 <td>Szeged</td>
@@ -48,7 +56,7 @@
                 <td>4</td>
             </tr>
             <tr>
-                <td>9:24</td>
+                <td class="elso_oszlop">9:24</td>
                 <td></td>
                 <td>SZ</td>
                 <td>Lakitelek</td>
@@ -56,7 +64,7 @@
                 <td>1</td>
             </tr>
             <tr>
-                <td>9:27</td>
+                <td class="elso_oszlop">9:27</td>
                 <td></td>
                 <td>IC</td>
                 <td>Nyugati** <br> 
@@ -66,7 +74,7 @@
                 <td>5</td>
             </tr>
             <tr>
-                <td>9:30</td>
+                <td class="elso_oszlop">9:30</td>
                 <td></td>
                 <td>IC</td>
                 <td>Szeged</td>
