--- a/indulo_vonatok.html
+++ b/indulo_vonatok.html
@@ -17,7 +17,7 @@
                 <th>Departures</th>
                 <th><img src="post_máv.jpg" alt="MÁV" width="75" title="MÁV Logo"></th>
             </tr>
-            <tr id="fejlec1">
+            <tr id="fejlec2">
                 <th>Tervezett Indulás</th>
                 <th>Valós Indulás</th>
                 <th>Vonat</th>
@@ -27,23 +27,23 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>8:31</td>
-                <td>8:43</td>
+            <tr id="fejlec1">
+                <td id="megjott">8:31</td>
+                <td id="nemjott">8:43</td>
                 <td>717</td>
                 <td>Budapest-Nyugati**</td>
                 <td>Kecskemét - Cegléd</td>
                 <td>5</td>
             </tr>
-            <tr>
-                <td>8:33</td>
+            <tr id="fejlec2">
+                <td id="megjott">8:33</td>
                 <td></td>
                 <td>7022</td>
                 <td>Szeged</td>
                 <td>Kistelek - Szatymaz</td>
                 <td>4</td>
             </tr>
-            <tr>
+            <tr id="fejlec1">
                 <td>9:30</td>
                 <td></td>
                 <td>712</td>
@@ -51,7 +51,7 @@
                 <td>Kistelek - Szatymaz</td>
                 <td>3</td>
             </tr>
-            <tr>
+            <tr id="fejlec2">
                 <td>9:31</td>
                 <td></td>
                 <td>727</td>
@@ -59,7 +59,7 @@
                 <td>Kistelek - Szatymaz</td>
                 <td>5</td>
             </tr>
-            <tr>
+            <tr id="fejlec1">
                 <td>9:44</td>
                 <td></td>
                 <td>7897</td>
