--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
             </tr>
         </tbody>
     </table>
-    <a href="indulo_vonatok.html">Induló Vonatok</a>
+    <a href="indulo_vonatok.html">INDULÓ VONATOK</a>
 </body>
 </html>
